Add validation with yup and formik

--- a/src/components/Registration/Registration.css
+++ b/src/components/Registration/Registration.css
@@ -15,3 +15,12 @@ ul{
 .registr-btn{
     margin-bottom: 158px;
 }
+.isSubmitting{
+    opacity: 0.6;
+}
+.red{
+    color: red
+}
+.green{
+    color: green;
+}
