--- a/src/pages/Enter/Enter.css
+++ b/src/pages/Enter/Enter.css
@@ -4,7 +4,6 @@
     font-size: 40px;
     font-weight: 500;
     line-height: normal;
-    /* margin-top: 118px; */
 }
 .welcomeImg{
     margin-top: 66px;
@@ -20,15 +19,14 @@
     width: 343px;
     height: 200px;
     display: inline-flex;
-    /* padding: 16px; */
     flex-direction: column;
     align-items: center;
-    /* gap: 24px; */
     border-radius: 20px;
     background: #FFF;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding: 20px;
 }
 .overlay{
     position: fixed;
@@ -36,7 +34,4 @@
     height: 100%;
     top: 0;
     background-color: rgba(0, 0, 0, 0.5);
-}
-.offscreen{
-    display: none;
 }
